# thalo

./: .gitignore  404.html  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  NOTEPAD.md  README.md  cog.toml  counter.component.new  counter.wasm  flake.nix  index.html  markdown-page.html  outbox-relay.Dockerfile  sitemap.xml  thalo-cli.Dockerfile  thalo-scylla-event-indexer.Dockerfile  wasi_preview1_component_adapter.command.wasm  wasi_preview1_component_adapter.reactor.wasm  wasi_snapshot_preview1.wasm
awto-es/: Cargo.toml
awto-es/src/: aggregate.rs  awto.rs  error.rs  event.rs  lib.rs  message.rs  reactor.rs  repository.rs
awto-es/src/command/: actor.rs  aggregate.rs  command.rs  mod.rs
awto-es/src/postgres/: event_store.rs  mod.rs  view.rs
awto-es/src/query/: event.rs  mod.rs  projection.rs  repository.rs
crates/thalo/: Cargo.toml
crates/thalo/src/: aggregate.rs  command.rs  consumer.rs  error.rs  event.rs  event_store.rs  lib.rs  macros.rs  metadata.rs  stream_name.rs
crates/thalo/src/event_store/: message.rs  mod.rs
crates/thalo/src/stream_name/: category.rs  id.rs
crates/thalo/wit/: aggregate.wit
crates/thalo_cli/: Cargo.toml  wasi_snapshot_preview1.wasm
crates/thalo_cli/src/: cli.rs  main.rs  terminal.rs
crates/thalo_cli/src/cli/: build.rs  execute.rs  publish.rs
crates/thalo_derive/: Cargo.toml
crates/thalo_derive/src/: command.rs  event.rs  events.rs  lib.rs
crates/thalo_event_indexer/: Cargo.toml  build.rs
crates/thalo_event_indexer/proto/: event_indexer.proto
crates/thalo_event_indexer/src/: lib.rs  main.rs
crates/thalo_message_db/: Cargo.toml
crates/thalo_message_db/src/: lib.rs
crates/thalo_message_store/: Cargo.toml
crates/thalo_message_store/src/: error.rs  global_event_log.rs  id_generator.rs  lib.rs  lock_registry.rs  message.rs  message_store.rs  outbox.rs  projection.rs  stream.rs
crates/thalo_registry/: Cargo.toml
crates/thalo_registry/src/: lib.rs
crates/thalo_runtime/: Cargo.toml  build.rs
crates/thalo_runtime/proto/: thalo.proto
crates/thalo_runtime/src/: broadcaster.rs  cli.rs  command.rs  command_actor.rs  flusher.rs  host.rs  interface.rs  lib.rs  main.rs  module.rs  registry.rs  relay.rs  rpc.rs  runtime.rs  stream.rs
crates/thalo_runtime/src/command/: aggregate_command_handler.rs  category_command_handler.rs  command_gateway.rs  command_handler.rs  entity_command_handler.rs  handler.rs  mod.rs  outbox_relay.rs  stream_command_handler.rs
crates/thalo_runtime/src/host/: clocks.rs  filesystem.rs  logging.rs  poll.rs  random.rs
crates/thalo_runtime/src/interface/: message.rs  quic.rs
crates/thalo_runtime/src/module/: wit_aggregate.rs
crates/thalo_runtime/src/projection/: mod.rs  (+2 more)
crates/thalo_runtime/wit/: aggregate.wit
crates/thalo_scylla/: Cargo.toml
crates/thalo_scylla/cql/: append_to_stream.sql  create_event_sequence_counter.sql  create_event_store.sql  create_keyspace.sql  init.sql  iter_stream.sql  max_sequence.sql
crates/thalo_scylla/src/: lib.rs
crates/thalo_scylla_event_indexer/: Cargo.toml  build.rs
crates/thalo_scylla_event_indexer/src/: lib.rs  main.rs  server.rs
crates/thalo_scylla_projection/: Cargo.toml
crates/thalo_scylla_projection/src/: checkpoint.rs  event_processor.rs  events_stream.rs  lib.rs
examples/bank/: .gitignore  Cargo.toml  README.md  app.Dockerfile  database.Dockerfile  db.sql  docker-compose.yml  init-db.sh  init.sql
examples/bank-account/: Cargo.toml  README.md  bank-account.esdl  build.rs
examples/bank-account/src/: bank_account.rs  bank_account_tests.rs  lib.rs
examples/bank/src/: aggregate.rs  config.rs  main.rs
examples/count_read_model/: Cargo.toml
examples/count_read_model/src/: main.rs
examples/projection/: Cargo.toml
examples/projection/src/: main.rs  projection.rs
outbox-relay/: Cargo.toml  Dockerfile  README.md
outbox-relay/src/: change.rs  error.rs  lib.rs  main.rs
thalo/: Cargo.toml
thalo-eventstoredb/: Cargo.toml  README.md
thalo-eventstoredb/src/: error.rs  event_store.rs  lib.rs
thalo-filestore/: Cargo.toml
thalo-filestore/src/: error.rs  event_store.rs  lib.rs
thalo-inmemory/: Cargo.toml
thalo-inmemory/src/: error.rs  event_store.rs  lib.rs
thalo-kafka/: Cargo.toml
thalo-kafka/src/: config.rs  error.rs  event_handler.rs  event_stream.rs  lib.rs  topic.rs
thalo-macros/: Cargo.toml
thalo-macros/src/: helpers.rs  lib.rs  traits.rs
thalo-macros/src/derive_macros/: aggregate.rs  aggregate_channel.rs  aggregate_type.rs  combined_event.rs  command.rs  command_message.rs  event.rs  event_identity.rs  identity.rs  mod.rs  multi_stream_topic.rs  pg_repository.rs  stream_topic.rs
thalo-macros/src/derives/: aggregate.rs  event.rs  event_type.rs  into_events.rs  into_iterator.rs  mod.rs  typeid.rs
thalo-macros/src/proc_macros/: aggregate_commands.rs  aggregate_events.rs  commands.rs  events.rs  mod.rs
thalo-postgres/: Cargo.toml
thalo-postgres/docker-image/: script.sh
thalo-postgres/docker-image/src/: Dockerfile
thalo-postgres/src/: error.rs  event_store.rs  lib.rs
thalo-postgres/src/queries/: insert_outbox_events.sql  load_aggregate_sequence.sql  load_events.sql  load_events_by_id.sql
thalo-schema/: Cargo.toml  bank-account.yaml
thalo-schema/src/: compiler.rs  error.rs  lib.rs  schema.rs
thalo-testing/: Cargo.toml
thalo-testing/src/: lib.rs
thalo/src/: actor.rs  aggregate.rs  app.rs  error.rs  event.rs  event_store.rs  event_stream.rs  lib.rs  shared_global.rs  topic.rs
thalo/src/aggregate/: command.rs
thalo/src/command/: actor.rs  aggregate.rs  mod.rs
thalo/src/postgres/: alias.rs  command.rs  event_store.rs  mod.rs  view.rs
thalo/src/query/: event.rs  mod.rs  repository.rs
thalo/src/tests_cfg/: mod.rs
thaloto/: Cargo.toml
thaloto-inmemory/: Cargo.toml
thaloto-inmemory/src/: event_store.rs  lib.rs
thaloto-postgres/: Cargo.toml
thaloto-postgres/src/: error.rs  event_store.rs  lib.rs
thaloto-postgres/src/queries/: load_events.sql  save_events.sql
thaloto/src/: aggregate.rs  event.rs  event_store.rs  event_stream.rs  lib.rs
thaloto/src/tests_cfg/: mod.rs
(+222 files in other folders)
