[workspace]
resolver = "2"
members = [
  # Core
  "crates/thalo",
  "crates/thalo_cli",
  "crates/thalo_message_store",
  "crates/thalo_derive",
  "crates/thalo_runtime",

  # Examples
  # "examples/bank_account",
  # "examples/count_read_model",
  "examples/counter",
  # "examples/todos",
]

[workspace.dependencies]
thalo = { path = "crates/thalo" }
thalo_derive = { path = "crates/thalo_derive" }
thalo_message_store = { path = "crates/thalo_message_store" }
thalo_runtime = { path = "crates/thalo_runtime" }

anyhow = "1.0"
async-trait = "0.1"
bytes = "1.2"
clap = { version = "4.0", features = ["derive", "env"] }
directories-next = "2.0"
futures = "0.3.25"
quinn = "0.9"
rmp-serde = "1.1"
rustls = "0.20"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = "1.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = "1.2"
wit-bindgen = "0.14"
