[workspace]
resolver = "2"
members = [
  # Core
  "crates/thalo",
  "crates/thalo_cli",
  "crates/thalo_message_store",
  "crates/thalo_derive",
  "crates/thalo_runtime",

  # Examples
  "examples/bank_account",
  "examples/counter",
  "examples/projection",
  "examples/todos",
]

[workspace.dependencies]
thalo = { path = "crates/thalo", version = "0.7.0" }
thalo_derive = { path = "crates/thalo_derive", version = "0.7.0" }
thalo_message_store = { path = "crates/thalo_message_store", version = "0.7.0" }
thalo_runtime = { path = "crates/thalo_runtime", version = "0.7.0" }

anyhow = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = "1.20"
tonic = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
