[package]
name = "awto-es"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.12"
async-trait = "0.1"
awto-es-macros = { path = "../awto-es-macros" }
bb8-postgres = { version = "0.7", features = ["with-serde_json-1"] }
futures = "0.3"
lru = "0.7"
rdkafka = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.14", features = ["rt", "sync"] }
tracing = "0.1"
