[package]
name = "awto-es"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.12"
async-trait = "0.1"
awto-es-macros = { path = "../awto-es-macros" }
bb8-postgres = { version = "0.7", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
] }
chrono = "0.4"
futures = "0.3"
lru = "0.7"
outbox-relay = { path = "../outbox-relay", optional = true }
rdkafka = "0.27"
sea-query = { version = "0.19", features = [
  "backend-postgres",
  "postgres",
  "postgres-json",
  "thread-safe",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.14", features = ["rt", "sync"] }
tracing = "0.1"

[features]
default = []
outbox_relay = ["outbox-relay"]
