[package]
name = "outbox-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
bb8-postgres = { version = "0.7", features = ["with-serde_json-1"] }
chrono = "0.4"
clap = "3.0.0-beta.5"
futures = "0.3"
rdkafka = "0.27"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.13", features = [
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
