[package]
name = "thalo-eventstoredb"
version = "0.5.0"
authors = ["Mike Shearer <shearerbeard@gmail.com>"]
edition = "2021"
description = "EventStoreDB event store for crates.io/thalo"
readme = "../README.md"
repository = "https://github.com/thalo-rs/thalo"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "event-driven", "actors", "macros"]
categories = [
  "database",
  "data-structures",
  "development-tools",
  "rust-patterns",
  "web-programming::http-server",
]
exclude = ["/docker-image"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
async-trait = "0.1"
chrono = "0.4"
eventstore = "2.0.0-alpha.2"
futures = "0.3"
prettytable-rs = { version = "0.8", optional = true }
serde = "1.0"
serde_json = "1.0"
thalo = { version = "0.5.0", path = "../thalo", features = [
  "event-store",
  "tests-cfg",
] }
uuid = { version  = "0.8", features = [ "v4", "serde" ] }

[features]
default = ["debug"]
debug = ["prettytable-rs"]
