[package]
name = "thalo-filestore"
version = "0.5.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "In-memory event store persisted to file for crates.io/thalo"
readme = "../README.md"
repository = "https://github.com/thalo-rs/thalo"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "event-driven", "actors", "macros"]
categories = [
  "database",
  "data-structures",
  "development-tools",
  "rust-patterns",
  "web-programming::http-server",
]

[dependencies]
async-trait = "0.1"
serde = "1.0"
serde_json = "1.0"
thalo = { version = "0.5.0", path = "../thalo", features = [
  "event-store",
  "tests-cfg",
] }
thalo-inmemory = { version = "0.5.0", path = "../thalo-inmemory" }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.3"
tokio = { version = "1.15", features = ["macros", "rt"] }
