[package]
name = "thalo-inmemory"
version = "0.3.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
prettytable-rs = { version = "0.8", optional = true }
serde = "1.0"
serde_json = "1.0"
thalo = { path = "../thalo", features = ["event-store", "tests-cfg"] }
thiserror = "1.0"

[features]
default = ["debug"]
debug = ["prettytable-rs"]
