[package]
name = "thalo-macros"
version = "0.2.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "Macros for crates.io/thalo"
readme = "../README.md"
repository = "https://github.com/thalo-rs/thalo"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "event-driven", "actors", "macros"]
categories = [
  "database",
  "data-structures",
  "development-tools",
  "rust-patterns",
  "web-programming::http-server",
]

[lib]
proc-macro = true

[dependencies]
heck = "0.3"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = [
  "full",
  "extra-traits",
  "parsing",
  "printing",
] }
