[package]
name = "thalo-postgres"
version = "0.3.3"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "Postgres event store for crates.io/thalo"
readme = "../README.md"
repository = "https://github.com/thalo-rs/thalo"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "event-driven", "actors", "macros"]
categories = [
  "database",
  "data-structures",
  "development-tools",
  "rust-patterns",
  "web-programming::http-server",
]
exclude = ["/docker-image"]

[dependencies]
async-trait = "0.1"
bb8-postgres = { version = "0.7", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
] }
serde = "1.0"
serde_json = "1.0"
thalo = { version = "0.3.3", path = "../thalo", features = [
  "event-store",
  "tests-cfg",
] }
thiserror = "1.0"
