[package]
name = "thalo-schema"
version = "0.4.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "Code generator based on aggregate schemas"
readme = "../README.md"
repository = "https://github.com/thalo-rs/thalo"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "event-driven", "build"]
categories = [
  "database",
  "data-structures",
  "development-tools",
  "rust-patterns",
  "web-programming::http-server",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0"
