[package]
name = "thalo-testing"
version = "0.4.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "Test utils for crates.io/thalo"
readme = "../README.md"
repository = "https://github.com/thalo-rs/thalo"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "event-driven", "actors", "macros"]
categories = [
  "database",
  "data-structures",
  "development-tools",
  "rust-patterns",
  "web-programming::http-server",
]

[dependencies]
thalo = { version = "0.4.0", path = "../thalo" }

[dev-dependencies]
thalo = { version = "0.4.0", path = "../thalo", features = ["macros"] }
thiserror = "1.0"
