[package]
name = "thalo"
version = "0.3.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "Event sourcing for microservices"
readme = "../README.md"
repository = "https://github.com/thalo-rs/thalo"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "event-driven", "actors", "macros"]
categories = [
  "database",
  "data-structures",
  "development-tools",
  "rust-patterns",
  "web-programming::http-server",
]

[dependencies]
actix = { version = "0.12", optional = true }
async-trait = { version = "0.1" }
async-stream = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", optional = true }
prettytable-rs = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
tonic = { version = "0.6", default-features = false, optional = true }

[dev-dependencies]
prettytable-rs = "0.8"
thiserror = "1.0"
tonic = { version = "0.6", default-features = false }

[features]
default = ["actor", "event-store", "event-stream", "with-tokio-stream"]
actor = ["actix"]
event-store = []
event-stream = ["futures-util"]
with-tokio-stream = ["async-stream", "futures-util", "tokio-stream"]
tests-cfg = ["prettytable-rs", "thiserror", "tonic"]
