[package]
name = "thalo"
version = "0.3.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "Event sourcing for microservices"
readme = "../README.md"
repository = "https://github.com/thalo-rs/thalo"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "event-driven", "actors", "macros"]
categories = [
  "database",
  "data-structures",
  "development-tools",
  "rust-patterns",
  "web-programming::http-server",
]

[dependencies]
async-trait = { version = "0.1" }
async-stream = { version = "0.3", optional = true }
chrono = { version = "0.4", features = ["serde"] }
futures-util = { version = "0.3", optional = true }
prettytable-rs = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
thalo-macros = { version = "0.3.0", path = "../thalo-macros", optional = true }
thiserror = { version = "1.0", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
tonic = { version = "0.6", default-features = false, optional = true }

[dev-dependencies]
prettytable-rs = "0.8"
thiserror = "1.0"
tonic = { version = "0.6", default-features = false }

[features]
default = ["event-store", "event-stream", "with-tokio-stream"]
event-store = []
event-stream = ["futures-util"]
macros = ["thalo-macros"]
with-tokio-stream = ["async-stream", "futures-util", "tokio-stream"]
tests-cfg = ["macros", "prettytable-rs", "thiserror", "tonic"]

[package.metadata.docs.rs]
all-features = true
