[package]
name = "thaloto-postgres"
version = "0.3.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"

[dependencies]
async-trait = "0.1"
bb8-postgres = { version = "0.7", features = [
  "with-chrono-0_4",
  "with-serde_json-1",
] }
serde = "1.0"
serde_json = "1.0"
thaloto = { path = "../thaloto", features = ["event-store", "tests-cfg"] }
thiserror = "1.0"
