[package]
name = "thaloto"
version = "0.3.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "An Event Sourcing framework for Event Driven Architechture"
readme = "../README.md"
repository = "https://github.com/thalo-rs/thalo"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "event-driven", "actors", "macros"]
categories = [
  "database",
  "data-structures",
  "development-tools",
  "rust-patterns",
  "web-programming::http-server",
]

[dependencies]
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["event-store"]
event-store = ["async-trait", "chrono", "serde"]
tests-cfg = []
