[package]
name = "thaloto"
version = "0.3.0"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
edition = "2021"
description = "An Event Sourcing framework for Event Driven Architechture"
readme = "../README.md"
repository = "https://github.com/thalo-rs/thalo"
license = "MIT OR Apache-2.0"
keywords = ["event-sourcing", "cqrs", "event-driven", "actors", "macros"]
categories = [
  "database",
  "data-structures",
  "development-tools",
  "rust-patterns",
  "web-programming::http-server",
]

[dependencies]
actix = { version = "0.12", optional = true }
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", optional = true }
futures-core = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = { version = "1.0", optional = true }
tonic = { version = "0.6", default-features = false, optional = true }

[features]
default = ["actor", "event-store", "event-stream"]
actor = ["actix"]
event-store = ["async-trait", "chrono", "serde"]
event-stream = ["futures-core", "serde"]
tests-cfg = ["thiserror", "tonic"]
