[package]
name = "thalo"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
heck = "0.4.1"
# message_db = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thalo_derive = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
wit-bindgen = "0.13"

[features]
consumer = [
  # "message_db/database"
]
