[package]
name = "thalo_cli"
version = "0.7.0"
edition = "2021"
description = "Cli tool for interacting with thalo through the quic protocol"
repository = "https://github.com/thalo-rs/thalo"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
keywords = ["event-sourcing", "wasm", "embedded-database"]
categories = ["database", "web-programming", "asynchronous-processing"]
license = "Apache-2.0 OR MIT"

[dependencies]
thalo_runtime = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
directories-next = { workspace = true }
quinn = { workspace = true }
rmp-serde = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2.3"
uuid = { workspace = true }
