[package]
name = "thalo_derive"
version = "0.7.0"
edition = "2021"
description = "Derive macros for thalo"
repository = "https://github.com/thalo-rs/thalo"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
keywords = ["event-sourcing", "wasm", "embedded-database"]
categories = ["database", "web-programming", "asynchronous-processing"]
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
