[package]
name = "thalo_message_store"
version = "0.7.0"
edition = "2021"

[dependencies]
dashmap = "5.5.3"
sled = "0.34.7"
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = "0.11.2"
thiserror = { workspace = true }
tracing = { workspace = true }
typed-builder = "0.18.0"
uuid = { workspace = true }
thalo = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
