[package]
name = "thalo_message_store"
version = "0.8.0"
edition = "2021"
description = "Thalo's message store built with sled"
repository = "https://github.com/thalo-rs/thalo"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
keywords = ["event-sourcing", "wasm", "embedded-database"]
categories = ["database", "web-programming", "asynchronous"]
license = "Apache-2.0 OR MIT"

[dependencies]
thalo = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
bincode = "1.3.3"
chrono = { workspace = true }
futures = { workspace = true }
sled = "0.34.7"
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = "0.11.2"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
