[package]
name = "thalo_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
esdl = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
