[package]
name = "thalo_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
derive_more = { workspace = true }
itertools = "0.11.0"
# esdl = { workspace = true }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sled = "0.34.7"
