[package]
name = "thalo_runtime"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "thalo"
path = "./src/main.rs"

[dependencies]
thalo = { workspace = true }
thalo_message_store = { workspace = true }

anyhow = { workspace = true }
async-trait = "0.1.74"
bytes = { workspace = true }
clap = { workspace = true }
directories-next = { workspace = true }
futures = { workspace = true }
itertools = "0.11.0"
moka = { version = "0.12.1", features = ["future"] }
quinn = { workspace = true }
ractor = "0.9.3"
rand = "0.8.5"
rcgen = { version = "0.10.0", features = ["pem", "x509-parser"] }
rmp-serde = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = "1.0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasmtime-wasi = { version = "14.0.4", features = ["tokio"] }
wasmtime = { version = "14.0", features = ["component-model"] }
