[package]
name = "thalo_runtime"
version = "0.7.0"
edition = "2021"
description = "A high-performance event sourcing runtime utilizing WebAssembly an embedded event store."
repository = "https://github.com/thalo-rs/thalo"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
keywords = ["event-sourcing", "wasm", "embedded-database"]
categories = ["database", "web-programming", "asynchronous"]
license = "Apache-2.0 OR MIT"

[[bin]]
name = "thalo"
path = "./src/main.rs"

[dependencies]
thalo = { workspace = true }
thalo_message_store = { workspace = true }

anyhow = { workspace = true }
async-trait = "0.1.74"
async-stream = "0.3.5"
bytes = { workspace = true }
clap = { workspace = true }
directories-next = { workspace = true }
futures = { workspace = true }
itertools = "0.11.0"
moka = { version = "0.12.1", features = ["future"] }
prost = "0.12"
prost-types = "0.12"
quinn = { workspace = true }
ractor = "0.9.3"
ractor_actors = "0.2.0"
rand = "0.8.5"
rcgen = { version = "0.10.0", features = ["pem", "x509-parser"] }
redis = { version = "0.23.3", features = ["tokio-comp"] }
rmp-serde = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = "1.0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tonic = "0.10"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wasmtime-wasi = { version = "14.0.4", features = ["tokio"] }
wasmtime = { version = "14.0", features = ["component-model"] }

[build-dependencies]
tonic-build = "0.10"
