[package]
name = "thalo_runtime"
version = "0.8.0"
edition = "2021"
description = "A high-performance event sourcing runtime utilizing WebAssembly and embedded event store."
repository = "https://github.com/thalo-rs/thalo"
authors = ["Ari Seyhun <ariseyhun@live.com.au>"]
keywords = ["event-sourcing", "wasm", "embedded-database"]
categories = ["database", "web-programming", "asynchronous"]
license = "Apache-2.0 OR MIT"

[[bin]]
name = "thalo-runtime"
path = "./src/main.rs"

[dependencies]
thalo = { workspace = true }
thalo_eventstore = { workspace = true }
thalo_scylla = { workspace = true }
eventstore = "2.3.0"
scylla = "0.10.1"
# thalo_message_store = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
async-recursion = "1.0.5"
async-stream = "0.3.5"
bytes = "1.2"
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
moka = { version = "0.12.1", features = ["future"] }
prost = "0.12"
prost-types = "0.12"
rand = "0.8.5"
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tonic = { workspace = true }
tracing = { workspace = true }
tracing-tunnel = { workspace = true, features = ["receiver"] }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
wasmtime-wasi = { version = "15.0", features = ["tokio"] }
wasmtime = { version = "15.0", features = ["component-model"] }

[build-dependencies]
tonic-build = "0.10"
