[package]
name = "thalo_scylla"
version = "0.8.0"
edition = "2021"

[dependencies]
thalo = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
scylla = "0.10.1"
thiserror = { workspace = true }
uuid = { workspace = true }
