[package]
name = "thalo_scylla_projection"
version = "0.1.0"
edition = "2021"

[dependencies]
thalo = { workspace = true }

async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
indicatif = { version = "0.17.8", features = ["tokio"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
scylla = { version = "0.11.1", features = ["chrono", "time"] }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
