[package]
name = "example-bank-account"
version = "0.1.0"
edition = "2021"

[dependencies]
thalo = { path = "../../thalo", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
thalo-testing = { path = "../../thalo-testing" }

[build-dependencies]
esdl = { version = "0.4", features = ["codegen-rust"] }
