[package]
name = "bank"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
async-trait = "0.1"
bb8-postgres = { version = "0.7", features = ["with-serde_json-1"] }
envy = "0.4"
futures = "0.3"
lazy_static = "1.4"
lru = "0.7"
rdkafka = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thalo = { path = "../../thalo", features = ["outbox_relay"] }
tokio = { version = "1.13", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
