[package]
name = "bank"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
actix = "0.12"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thalo = { path = "../../thalo", features = ["outbox_relay"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
