[package]
name = "count_read_model"
version = "0.1.0"
edition = "2021"

[dependencies]
counter = { path = "../counter" }
thalo = { workspace = true, features = ["consumer"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
message_db = { workspace = true }
mongodb = { version = "2.3" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
