[package]
name = "projection"
version = "0.1.0"
edition = "2021"

[dependencies]
thalo = { workspace = true }
thalo_runtime = { workspace = true }
counter = { path = "../counter" }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sled = "0.34"
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread"] }
